@@ -1,3 +1,7 @@
+2008-09-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	* t/GtkIconView.t: Fix test failure on older gtk+.
+
 2008-09-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	Fix some test failures related to floating point number
